# buildscad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/buildscad/: __init__.py  builder.py  cli.py  config.py  dependencies.py  error.py  types.py  version.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_dependencies.py  test_version.py
