[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildscad"
version = "1.2.0"
description = "A build tool for OpenSCAD projects"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jproperties>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "python-semantic-release>=9.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[project.scripts]
buildscad = "buildscad.cli:cli"

[tool.black]
line-length = 100
target-version = ["py310"]
